<?xml version="1.0" encoding="utf-8"?>
<com.example.design_system.components.loader.ContentLoaderView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:background="@mipmap/foroom_background_primary">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <com.example.design_system.components.image_view.CircleImageView
                    android:id="@+id/imageView"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_gravity="center"/>

                <com.example.design_system.components.language_chooser.ForoomLanguageChooserView
                    android:id="@+id/languageSelector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    app:languages="ka, en"/>

            </FrameLayout>

            <com.example.design_system.components.input.Input
                android:id="@+id/userNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:hint="@string/hint_username"/>

            <com.example.design_system.components.input.Input
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:inputType="textPassword"
                app:hint="@string/hint_password"/>

            <com.example.design_system.components.input.Input
                android:id="@+id/repeatPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:inputType="textPassword"
                app:hint="@string/hint_repeat_password"/>

            <com.example.design_system.components.image_chooser.ImageChooserListView
                android:id="@+id/listView"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <com.example.design_system.components.button.PrimaryButton
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginBottom="12dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/logInTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/jostText1Regular"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="32dp"
                android:text="@string/registration_log_in"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

</com.example.design_system.components.loader.ContentLoaderView>