<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/foroom_background_primary">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/closeButton"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_margin="24dp"
        android:src="@drawable/icon_close"
        android:tint="@color/foroom_main_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/jostText1Regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="24dp"
        android:text="@string/create_chat_title"
        android:background="@drawable/background_capsule"
        android:backgroundTint="@color/foroom_layer_background"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"/>

    <com.example.design_system.components.chat.ForoomChatHeaderView
        android:id="@+id/chatHeaderView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <com.example.design_system.components.input.Input
        android:id="@+id/chatNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/chatHeaderView"
        app:hint="@string/create_chat_chat_name"/>

    <com.example.design_system.components.image_chooser.ImageChooserListView
        android:id="@+id/chatImageChooser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/chatNameInput"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"/>

    <com.example.design_system.components.button.PrimaryButton
        android:id="@+id/createChatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_chat"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>